log/build_2025-08-21_14-31-09/SerialTest/stderr.log
  File "/home/fu941/TDK_ros/install/SerialTest/lib/python3.10/site-packages/SerialTest/other_serial_node.py", line 53
    elif line.startswith("ACK:"):
    ^^^^
SyntaxError: invalid syntax

